RESOLVED FIXED231761
[LFC][IFC] Do not break the word-wrap: break-word content on inline box boundary
https://bugs.webkit.org/show_bug.cgi?id=231761
Summary [LFC][IFC] Do not break the word-wrap: break-word content on inline box boundary
alan
Reported 2021-10-14 12:41:19 PDT
ssia
Attachments
Patch (8.87 KB, patch)
2021-10-14 13:22 PDT, alan
no flags
alan
Comment 1 2021-10-14 13:22:59 PDT
EWS
Comment 2 2021-10-15 06:33:55 PDT
Committed r284242 (243051@main): <https://commits.webkit.org/243051@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441267 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-15 06:34:18 PDT
Note You need to log in before you can comment on or make changes to this bug.