[LFC][IFC] Do not break the word-wrap: break-word content on inline box boundary https://bugs.webkit.org/show_bug.cgi?id=231761

Reviewed by Antti Koivisto.

Source/WebCore:

When the text content is breakable at arbitrary position and it is not the overflowing content (the overflowing content is not breakable)
we just return the text run as the trailing run as it surely fits e.g.

<span style="word-wrap: break-word">this_content_is_breakable</span>and_this_content_overflows

1. There's no soft wrapping opportunity between the two text runs (they form a continuous set)
2. The trailing run overflow but can't be split
we go backwards on the set to find a breakable one. In this case the first text run is breakable (see CSS property) and
since we know it fits the line we just simply declare the end of the run as the breaking position.
However we should try to keep the runs and their adjacent inline box boundary runs together and instead find the end of the </span> as
the breaking position. It's mostly noticeable when the inline box has some visual decoration e.g. border.

Test: fast/inline/wordbreak-at-inline-box-boundary.html

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):
(WebCore::Layout::InlineContentBreaker::tryBreakingPreviousNonOverflowingRuns const):

LayoutTests:

* fast/inline/wordbreak-at-inline-box-boundary-expected.html: Added.
* fast/inline/wordbreak-at-inline-box-boundary.html: Added.


Canonical link: https://commits.webkit.org/243051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284242 268f45cc-cd09-0410-ab3c-d52691b4dbfc